--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^1.30.1",
     "next": "8.0.1",
     "react": "^16.8.6",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.5",
     "react-redux": "^7.0.3",
