--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "license": "MIT",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "date-fns": "^1.30.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "next": "8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
     "react-datepicker": "^2.5.0",
@@ -22,7 +30,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ./"
   },
   "engines": {
     "node": "10.15.1"
